# AssetManager

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  __init__.py  config.json  filters.json  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/: copilot-instructions.md
js/: api.js  folderSelector.js  sidebar.js  state.js  style.css  template.js
js/components/: cardRenderer.js  contextMenu.js  filterChips.js  filterMenu.js  gridView.js  imageViewer.js  infoPanel.js  settingsPanel.js  sortMenu.js
routes/: __init__.py  favorites.py  files.py  folders.py  history.py  metadata.py  settings.py  tags.py
src/: App.vue  main.js  style.css
src/components/: AssetCard.vue  AssetGrid.vue  ContextMenu.vue  FilterChips.vue  FilterMenu.vue  FolderSelector.vue  GridView.vue  ImageViewer.vue  InfoPanel.vue  SearchBar.vue  SettingsPanel.vue  SortMenu.vue  StatusLine.vue  TopNav.vue
src/composables/: useApi.js  useAssetState.js
utils/: config.py  helpers.py  indexer.py  metadata.py  png_io.py  search.py  security.py  watcher.py
