[project]
name = "assetmanager"
description = ""
version = "2.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/c0dezer019/AssetManager"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/c0dezer019/AssetManager/wiki"
"Bug Tracker" = "https://github.com/c0dezer019/AssetManager/issues"

[tool.comfy]
PublisherId = "c0dezer019"
DisplayName = "Asset Manager"
Icon = ""
includes = []
