[project]
name = "assetmanager"
description = "ComfyUI sidebar extension for browsing, searching, and managing generated images and input assets. Scans input, output, and custom directories; indexes PNG/WebP metadata into SQLite for fast filtering by model, LoRA, sampler, prompt, and more; supports favorites, NSFW filtering, workflow loading, and an integrated fullscreen image viewer."
version = "3.1.0"
license = {file = "LICENSE"}
dependencies = ["watchdog>=3.0.0"]

[project.urls]
Repository = "https://github.com/c0dezer019/AssetManager"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/c0dezer019/AssetManager/wiki"
"Bug Tracker" = "https://github.com/c0dezer019/AssetManager/issues"

[tool.comfy]
PublisherId = "c0dezer019"
DisplayName = "Asset Manager"
Icon = ""
includes = []
